cluster/apps/data/adminer/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # -- Nginx client Body Buffer Size
    nginx.ingress.kubernetes.io/client-body-buffer-size: "128m"
    # -- Nginx Proxy Body Size
    nginx.ingress.kubernetes.io/proxy-body-size: "128m"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"

  labels:
    app.kubernetes.io/instance: adminer
    app.kubernetes.io/name: adminer
  name: adminer
  namespace: data
spec:
  rules:
    - host: adminer.${SECRET_CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adminer
                port:
                  number: 80
  tls:
    - hosts:
        - adminer.${SECRET_CLUSTER_DOMAIN}
